--- a/Commune Waitlist Page/style.css
+++ b/Commune Waitlist Page/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .page-wrapper {
     display: flex;
     flex-direction: column;
@@ -32,10 +36,11 @@
     border-radius: 50px;
     padding: 5px;
     margin-top: 50px;
-    margin-bottom: 18px;
+    margin-bottom: 10px;
     text-align: center;
-    width: 31vw;
+    width: 33vw;
     color: aliceblue;
+    font-weight: normal;
 }
 
 .filled_box a {
@@ -60,7 +65,11 @@ input {
     height: 30px;
     width: 15vw;
     border-radius: 5px;
-    border-width: 1px;
+    border-width: 2px;
+    color: #ebebeb;
+    border-color: #ebebeb;
+    border-style: solid;
+    text-decoration: none;
 }
 
 .waitlist_button {
@@ -83,4 +92,14 @@ footer {
     height: 30px;
     margin-top: 10px;
     gap: 10px;
+}
+
+.illustration {
+    display: flex;
+    margin-left: auto;
+    height: 350px;
+}
+
+.main {
+    display: flex;
 }
