--- a/Commune Waitlist Page/style.css
+++ b/Commune Waitlist Page/style.css
@@ -48,10 +48,11 @@ body {
 }
 
 .build_a {
+    color: #483285;
     font-size: 3rem;
     width: 50vw;
     margin-bottom: 10px;
-    font-family: oswald;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 p {
